# hy-templates

./: README.md
cookiecutter-hy/: README.md  cookiecutter.json
cookiecutter-hy/hooks/: pre_gen_project.py
cookiecutter-hy/{{cookiecutter.project_slug}}/: LICENSE  README.md  pyproject.toml
cookiecutter-hy/{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.hy
cookiecutter-hy/{{cookiecutter.project_slug}}/tests/: test_main.hy
hatch-hy/: README.md  pyproject.toml
hatch-hy/src/hatch_hy/: hooks.py  template.py
hatch-hy/src/hatch_hy/templates/: README.md  pyproject.toml
hatch-hy/tests/: test_collect_files.py  test_template.py
poetry-hy-plugin/: README.md  pyproject.toml
poetry-hy-plugin/src/poetry_hy_plugin/: plugin.py
poetry-hy-plugin/src/poetry_hy_plugin/templates/: README.md  pyproject.toml
poetry-hy-plugin/src/poetry_hy_plugin/templates/src/hy_project/: __init__.hy
poetry-hy-plugin/src/poetry_hy_plugin/templates/tests/: test_main.hy
poetry-hy-plugin/tests/: test_copy_tree.py  test_scaffold.py
template-hy/: README.md  conftest.py  pyproject.toml
template-hy/src/hy_project/: __init__.hy  main.hy
template-hy/tests/: test_main.hy
