[build-system]
requires = ["setuptools >= 61.0", "hy >= 1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hy-project"
version = "0.1.0"
description = "A Hy project"
requires-python = ">= 3.9"
dependencies = ["hy >= 1.0"]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.hy"]

[tool.pdm]
distribution = true
