[build-system]
requires = ["setuptools >= 61.0", "hy >= 1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
requires-python = ">= 3.9"
dependencies = ["hy >= 1.0"]
license = {text = "MIT"}
authors = [{name = "{{cookiecutter.author}}"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.hy"]
